// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating astro stats 4 {"format":"es","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-astro-v4-client-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "dist",
  "plugin": {
    "name": StringMatching "@codecov/astro-plugin",
    "version": "1.5.1",
  },
  "version": "3",
}
`;

exports[`Generating astro stats 4 {"format":"es","expected":"esm"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-astro-v4-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "dist",
  "plugin": {
    "name": StringMatching "@codecov/astro-plugin",
    "version": "1.5.1",
  },
  "version": "3",
}
`;

exports[`Generating astro stats 4 {"format":"esm","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-astro-v4-client-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "dist",
  "plugin": {
    "name": StringMatching "@codecov/astro-plugin",
    "version": "1.5.1",
  },
  "version": "3",
}
`;

exports[`Generating astro stats 4 {"format":"esm","expected":"esm"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-astro-v4-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "dist",
  "plugin": {
    "name": StringMatching "@codecov/astro-plugin",
    "version": "1.5.1",
  },
  "version": "3",
}
`;

exports[`Generating astro stats 4 {"format":"module","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-astro-v4-client-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "dist",
  "plugin": {
    "name": StringMatching "@codecov/astro-plugin",
    "version": "1.5.1",
  },
  "version": "3",
}
`;

exports[`Generating astro stats 4 {"format":"module","expected":"esm"} matches the snapshot 2`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-astro-v4-server-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.22.4",
  },
  "chunks": ExpectArrayContaining {},
  "duration": Any<Number>,
  "modules": ExpectArrayContaining {},
  "outputPath": StringContaining "dist",
  "plugin": {
    "name": StringMatching "@codecov/astro-plugin",
    "version": "1.5.1",
  },
  "version": "3",
}
`;
